modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,62 @@
 <!DOCTYPE html>
 <html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+
+<head>
+</head>
+
+<body>
+   <Div>
+      <div><img src="C:\Users\scott\Pictures\improdrawing.jpg" alt=""></div>
+      <h1>Improv: The art of just saying yes
+
+         <div>
+            <p>An Introspective Journey from the Mind of <br>Scott Weinberg</p>
+            <div>
+               <div id="fourPics">
+
+                  <div class="small pic"> /*will be smallpic</div>
+                  <div class="small pic">small pic</div>
+                  <div class="small pic">small pic</div>
+                  <div class="small pic">small pic</div>
+               </div>
+               <div id="firstPara">
+                  <h2>Clap Your hands say Yes.</h2>
+                 <div>
+                  <h3>The basics</h3>
+                  <P>about the second most improtant thing....talking about practice.</P>
+                  <a href="allen iverson gif"></a>
+                 </div>
+               <h3>classes</h3>
+                 <div>
+                  <p>classes</p>
+                  <a href="link to can i get a"></a>
+                  <a href="link to exercises and warm-ups"></a>
+                  <p>practice</p>
+                 </div>
+               </div>
+               <div id="second block">
+                  <h2>shows</h2>
+                  <div>
+                     <p id="secondPara"></p>
+                     <div>
+                        <div class=" group pics">
+                           <img src="" alt="group pic">
+                           <img src="" alt="group pic">
+                        
+                        </div>
+
+                     </div>
+                  </div>
+
+
+               </Div>
+            </div>
+
+
+
+
+
+
+</body>
+
 </html>
